--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
         <div
           class="flex flex-col justify-center items-center text-center gap-4"
         >
-          <div
+          <!-- radial progress bar using conic-gradient -->
+          <!-- <div
             class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
             style="
               --i: 87%;
@@ -354,6 +355,38 @@
             >
               87<span class="text-[#FF4240]">%</span>
             </h3>
+          </div> -->
+          <!-- radial progress bar using svg -->
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center"
+          >
+            <svg class="w-[120px] h-[120px] relative">
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#e7e7e8"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="0"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#ff4240"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="calc(345 - (345 * 87) / 100)"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+            </svg>
+            <h3
+              class="absolute text-center text-website-black text-[28px] font-extrabold"
+            >
+              87<span class="text-[#FF4240]">%</span>
+            </h3>
           </div>
           <h3 class="text-website-black text-xl font-semibold">
             National Hockey League
@@ -366,10 +399,11 @@
         <div
           class="flex flex-col justify-center items-center text-center gap-4"
         >
-          <div
+          <!-- radial progress bar using conic-gradient -->
+          <!-- <div
             class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
             style="
-              --i: 95%;
+              --i: 80%;
               --clr: #49d293;
               background: conic-gradient(
                 from 0deg,
@@ -385,7 +419,39 @@
             <h3
               class="relative text-center text-website-black text-[28px] font-extrabold"
             >
-              95<span class="text-[#49D293]">%</span>
+              80<span class="text-[#49D293]">%</span>
+            </h3>
+          </div> -->
+          <!-- radial progress bar using svg -->
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center"
+          >
+            <svg class="w-[120px] h-[120px] relative">
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#e7e7e8"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="0"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#49d293"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="calc(345 - (345 * 80) / 100)"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+            </svg>
+            <h3
+              class="absolute text-center text-website-black text-[28px] font-extrabold"
+            >
+              80<span class="text-[#49D293]">%</span>
             </h3>
           </div>
           <h3 class="text-website-black text-xl font-semibold">
@@ -398,10 +464,11 @@
         <div
           class="flex flex-col justify-center items-center text-center gap-4"
         >
-          <div
+          <!-- radial progress bar using conic-gradient -->
+          <!-- <div
             class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
             style="
-              --i: 90%;
+              --i: 30%;
               --clr: #ffb546;
               background: conic-gradient(
                 from 0deg,
@@ -417,7 +484,39 @@
             <h3
               class="relative text-center text-website-black text-[28px] font-extrabold"
             >
-              90<span class="text-[#FFB546]">%</span>
+              30<span class="text-[#FFB546]">%</span>
+            </h3>
+          </div> -->
+          <!-- radial progress bar using svg -->
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center"
+          >
+            <svg class="w-[120px] h-[120px] relative">
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#e7e7e8"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="0"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#ffb546"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="calc(345 - (345 * 30) / 100)"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+            </svg>
+            <h3
+              class="absolute text-center text-website-black text-[28px] font-extrabold"
+            >
+              30<span class="text-[#ffb546]">%</span>
             </h3>
           </div>
           <h3 class="text-website-black text-xl font-semibold">
@@ -430,10 +529,11 @@
         <div
           class="flex flex-col justify-center items-center text-center gap-4"
         >
-          <div
+          <!-- radial progress bar using conic-gradient -->
+          <!-- <div
             class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center before:content-[''] before:absolute before:bg-white before:rounded-full before:inset-[10px]"
             style="
-              --i: 80%;
+              --i: 75%;
               --clr: #4c8df1;
               background: conic-gradient(
                 from 0deg,
@@ -449,7 +549,40 @@
             <h3
               class="relative text-center text-website-black text-[28px] font-extrabold"
             >
-              80<span class="text-[#4C8DF1]">%</span>
+              75<span class="text-[#4C8DF1]">%</span>
+            </h3>
+          </div> -->
+
+          <!-- radial progress bar using svg -->
+          <div
+            class="relative w-[120px] h-[120px] rounded-full flex justify-center items-center text-center"
+          >
+            <svg class="w-[120px] h-[120px] relative">
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#e7e7e8"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="0"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+              <circle
+                class="fill-none stroke-[10px]"
+                stroke="#4C8DF1"
+                stroke-linecap="round"
+                stroke-dasharray="345"
+                stroke-dashoffset="calc(345 - (345 * 75) / 100)"
+                cx="60"
+                cy="60"
+                r="55"
+              />
+            </svg>
+            <h3
+              class="absolute text-center text-website-black text-[28px] font-extrabold"
+            >
+              75<span class="text-[#4C8DF1]">%</span>
             </h3>
           </div>
           <h3 class="text-website-black text-xl font-semibold">
